Backport r1128701.

Change the way 7z's listing output is parsed.

7z first lists some information about the archive itself before showing
information about the entries in it, and the code did not take that into
account.

We now make that distinction, so that parsing entries after an entry is
added, for example, works as expected.

BUG: 238044

svn path=/branches/KDE/4.4/kdeutils/ark/; revision=1128702